--- a/styles.css
+++ b/styles.css
@@ -1034,12 +1034,15 @@ padding-right: 8px;
   justify-content: center;
   align-items: center;
 }
-.swiper-slide img {
-  display: block;
+.swiper-img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 520px;
+  overflow: hidden;
+  border-radius: 24px;
   margin-bottom: 40px;
+}
+.swiper-img img {
+  height: 100%;
 }
 .swiper-title, .swiper-text {
   max-width: 960px;
@@ -1058,8 +1061,11 @@ padding-right: 8px;
 }
 .swiper-button-next, .swiper-button-prev {
   position: absolute !important;
-  top: var(--swiper-navigation-top-offset, 80%) !important;
+  top: var(--swiper-navigation-top-offset, 260px) !important;
   color: var(--white) !important;
+}
+.swiper-pagination-bullets {
+  top: var(--swiper-pagination-top, 480px) !important;
 }
 .swiper-pagination-bullet {
   width: 16px !important;
@@ -1652,26 +1658,38 @@ textarea {
   .swiper-slide {
     font-size: 1em;
   }
-  .swiper-img img {
+  .swiper-img {
+    width: 100%;
+    margin: 0 auto;
+    height: 420px;
+    overflow: hidden;
+    border-radius: 24px;
     margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .swiper-img img {
+    object-fit: cover;
   }
   .swiper-text {
+    width: 100%;
     height: fit-content !important;
     padding: 0 24px;
     margin-bottom: 80px;
   }
   .swiper-text p {
     line-height: 1.5em;
-    text-align: left;
+    text-align: center;
   }
   .swiper-button-next, .swiper-button-prev {
     position: absolute !important;
-    top: var(--swiper-navigation-top-offset, 190px) !important;
+    top: var(--swiper-navigation-top-offset, 210px) !important;
     color: var(--white) !important;
   }
   .swiper-pagination {
     position: absolute !important;
-    top: var(--swiper-navigation-top-offset, 168px) !important;
+    top: var(--swiper-navigation-top-offset, 380px) !important;
     color: var(--white) !important;
   }
   .swiper-pagination-bullet {
@@ -2222,26 +2240,38 @@ textarea {
   .swiper-slide {
     font-size: 1em !important;
   }
-  .swiper-img img {
+  .swiper-img {
+    width: 100%;
+    height: 320px;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 24px;
     margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .swiper-img img {
+    object-fit: cover;
   }
   .swiper-text {
+    width: 100%;
     height: fit-content !important;
     padding: 0 24px;
     margin-bottom: 80px;
   }
   .swiper-text p {
     line-height: 1.5em;
-    text-align: left;
+    text-align: center;
   }
   .swiper-button-next, .swiper-button-prev {
     position: absolute !important;
-    top: var(--swiper-navigation-top-offset, 98px) !important;
+    top: var(--swiper-navigation-top-offset, 160px) !important;
     color: var(--white) !important;
   }
   .swiper-pagination {
     position: absolute !important;
-    top: var(--swiper-navigation-top-offset, 168px) !important;
+    top: var(--swiper-navigation-top-offset, 280px) !important;
     color: var(--white) !important;
   }
   .swiper-pagination-bullet {
